--- a/TipTap/Module/SharedDiary/SharedDiary.storyboard
+++ b/TipTap/Module/SharedDiary/SharedDiary.storyboard
@@ -48,6 +48,21 @@
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uet-gE-sMy">
+                                                            <rect key="frame" x="24" y="0.0" width="2" height="24"/>
+                                                            <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="2" id="gey-0f-JqM"/>
+                                                                <constraint firstAttribute="height" constant="24" id="zYr-Q4-zHW"/>
+                                                            </constraints>
+                                                        </view>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tyK-2P-Rce">
+                                                            <rect key="frame" x="6" y="34" width="31" height="14.5"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
                                                     </subviews>
                                                     <color key="backgroundColor" red="0.98431372549999996" green="0.98431372549999996" blue="0.98431372549999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -55,6 +70,8 @@
                                                         <constraint firstAttribute="bottom" secondItem="OYP-Gp-6UG" secondAttribute="bottom" constant="592" id="3xf-65-6bw"/>
                                                         <constraint firstAttribute="bottom" secondItem="bdE-Ag-BbT" secondAttribute="bottom" constant="21" id="4Vz-S2-qiR"/>
                                                         <constraint firstItem="bdE-Ag-BbT" firstAttribute="centerX" secondItem="NPJ-iD-caQ" secondAttribute="centerX" id="I8e-NT-KeB"/>
+                                                        <constraint firstItem="uet-gE-sMy" firstAttribute="leading" secondItem="NPJ-iD-caQ" secondAttribute="leading" constant="24" id="J4e-DR-reg"/>
+                                                        <constraint firstItem="uet-gE-sMy" firstAttribute="top" secondItem="NPJ-iD-caQ" secondAttribute="top" id="Wvt-mn-vlT"/>
                                                         <constraint firstItem="OYP-Gp-6UG" firstAttribute="centerX" secondItem="NPJ-iD-caQ" secondAttribute="centerX" id="fjz-W7-ExW"/>
                                                     </constraints>
                                                 </view>
@@ -69,7 +86,9 @@
                                         </constraints>
                                         <size key="customSize" width="375" height="647"/>
                                         <connections>
+                                            <outlet property="locationLabel" destination="tyK-2P-Rce" id="ZaJ-zN-Ytz"/>
                                             <outlet property="titleLabel" destination="OYP-Gp-6UG" id="dPH-3f-uGG"/>
+                                            <outlet property="verLineView" destination="uet-gE-sMy" id="pyy-Pu-vuX"/>
                                             <outlet property="view" destination="NPJ-iD-caQ" id="6oa-w6-PXd"/>
                                         </connections>
                                     </collectionViewCell>
@@ -81,7 +100,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8XU-aO-ENz" userLabel="Container">
-                                                    <rect key="frame" x="8" y="8" width="359" height="192"/>
+                                                    <rect key="frame" x="16" y="20" width="359" height="188"/>
                                                     <subviews>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l0S-px-aEh" userLabel="bar">
                                                             <rect key="frame" x="0.0" y="9" width="17" height="1"/>
@@ -104,13 +123,16 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n2i-JS-5V4" userLabel="Diary Location Label">
-                                                            <rect key="frame" x="86" y="28" width="222" height="20.5"/>
+                                                            <rect key="frame" x="86" y="28" width="222" height="21"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="21" id="MUu-vM-cOc"/>
+                                                            </constraints>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yir-jg-ddC" userLabel="Diary Body Label">
-                                                            <rect key="frame" x="86" y="56.5" width="222" height="75.5"/>
+                                                            <rect key="frame" x="86" y="57" width="222" height="71"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -140,8 +162,7 @@
                                         </view>
                                         <color key="backgroundColor" red="0.98431372549999996" green="0.98431372549999996" blue="0.98431372549999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="trailingMargin" secondItem="8XU-aO-ENz" secondAttribute="trailing" id="NoI-3F-2sL"/>
-                                            <constraint firstItem="8XU-aO-ENz" firstAttribute="leading" secondItem="RMN-JY-nD4" secondAttribute="leadingMargin" id="Q8O-IY-g5g"/>
+                                            <constraint firstAttribute="trailing" secondItem="8XU-aO-ENz" secondAttribute="trailing" id="NP3-v0-jNz"/>
                                             <constraint firstItem="8XU-aO-ENz" firstAttribute="top" secondItem="RMN-JY-nD4" secondAttribute="topMargin" id="Qnw-T0-Rct"/>
                                             <constraint firstAttribute="bottomMargin" secondItem="8XU-aO-ENz" secondAttribute="bottom" id="RTM-rt-bvF"/>
                                         </constraints>
