--- a/TipTap/Module/SharedDiary/SharedDiary.storyboard
+++ b/TipTap/Module/SharedDiary/SharedDiary.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -37,13 +36,13 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NPJ-iD-caQ">
-                                                    <rect key="frame" x="8" y="8" width="359" height="631"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="scroll" translatesAutoresizingMaskIntoConstraints="NO" id="bdE-Ag-BbT">
-                                                            <rect key="frame" x="109" y="578" width="141" height="32"/>
+                                                            <rect key="frame" x="117" y="594" width="141" height="32"/>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OYP-Gp-6UG" userLabel="Title Label">
-                                                            <rect key="frame" x="161.5" y="22" width="35.5" height="17"/>
+                                                            <rect key="frame" x="169.5" y="38" width="35.5" height="17"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -79,10 +78,10 @@
                                         </view>
                                         <color key="backgroundColor" red="0.98431372549999996" green="0.98431372549999996" blue="0.98431372549999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="bottomMargin" secondItem="NPJ-iD-caQ" secondAttribute="bottom" id="Ii6-MA-hIU"/>
-                                            <constraint firstItem="NPJ-iD-caQ" firstAttribute="leading" secondItem="oJW-ba-M3A" secondAttribute="leadingMargin" id="PGs-iI-a6i"/>
-                                            <constraint firstItem="NPJ-iD-caQ" firstAttribute="top" secondItem="oJW-ba-M3A" secondAttribute="topMargin" id="bbl-I9-ASB"/>
-                                            <constraint firstAttribute="trailingMargin" secondItem="NPJ-iD-caQ" secondAttribute="trailing" id="rrV-nN-KHC"/>
+                                            <constraint firstAttribute="bottom" secondItem="NPJ-iD-caQ" secondAttribute="bottom" id="UfV-rV-XbW"/>
+                                            <constraint firstAttribute="trailing" secondItem="NPJ-iD-caQ" secondAttribute="trailing" id="fQZ-nq-zNa"/>
+                                            <constraint firstItem="NPJ-iD-caQ" firstAttribute="leading" secondItem="oJW-ba-M3A" secondAttribute="leading" id="oZW-8z-3My"/>
+                                            <constraint firstItem="NPJ-iD-caQ" firstAttribute="top" secondItem="oJW-ba-M3A" secondAttribute="top" id="tvW-ra-pvB"/>
                                         </constraints>
                                         <size key="customSize" width="375" height="647"/>
                                         <connections>
@@ -100,7 +99,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8XU-aO-ENz" userLabel="Container">
-                                                    <rect key="frame" x="16" y="20" width="359" height="188"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="208"/>
                                                     <subviews>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l0S-px-aEh" userLabel="bar">
                                                             <rect key="frame" x="0.0" y="9" width="17" height="1"/>
@@ -132,7 +131,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yir-jg-ddC" userLabel="Diary Body Label">
-                                                            <rect key="frame" x="86" y="57" width="222" height="71"/>
+                                                            <rect key="frame" x="86" y="57" width="222" height="91"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -140,31 +139,31 @@
                                                     </subviews>
                                                     <color key="backgroundColor" red="0.98431372549019602" green="0.98431372549019602" blue="0.98431372549019602" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="trailing" secondItem="yir-jg-ddC" secondAttribute="trailing" constant="51" id="ASI-im-QVo"/>
+                                                        <constraint firstAttribute="trailing" secondItem="yir-jg-ddC" secondAttribute="trailing" constant="67" id="ASI-im-QVo"/>
                                                         <constraint firstItem="sIP-qd-Pe4" firstAttribute="top" secondItem="8XU-aO-ENz" secondAttribute="top" id="DW2-gQ-xCZ"/>
                                                         <constraint firstItem="sIP-qd-Pe4" firstAttribute="leading" secondItem="l0S-px-aEh" secondAttribute="trailing" constant="8" id="FBJ-EB-a5P"/>
                                                         <constraint firstItem="l0S-px-aEh" firstAttribute="top" secondItem="8XU-aO-ENz" secondAttribute="top" constant="9" id="LS8-TW-UXw"/>
-                                                        <constraint firstAttribute="trailing" secondItem="n2i-JS-5V4" secondAttribute="trailing" constant="51" id="Lnt-Xs-L1t"/>
+                                                        <constraint firstAttribute="trailing" secondItem="n2i-JS-5V4" secondAttribute="trailing" constant="67" id="Lnt-Xs-L1t"/>
                                                         <constraint firstItem="we2-aQ-2fJ" firstAttribute="leading" secondItem="sIP-qd-Pe4" secondAttribute="trailing" constant="19" id="RGM-tl-haG"/>
                                                         <constraint firstItem="yir-jg-ddC" firstAttribute="top" secondItem="n2i-JS-5V4" secondAttribute="bottom" constant="8" id="UE0-Om-Es3"/>
                                                         <constraint firstItem="yir-jg-ddC" firstAttribute="leading" secondItem="n2i-JS-5V4" secondAttribute="leading" id="UxH-P8-IdG"/>
                                                         <constraint firstItem="we2-aQ-2fJ" firstAttribute="top" secondItem="sIP-qd-Pe4" secondAttribute="top" id="X6j-Cz-Mn1"/>
                                                         <constraint firstItem="l0S-px-aEh" firstAttribute="leading" secondItem="8XU-aO-ENz" secondAttribute="leading" id="XYf-XG-KI0"/>
                                                         <constraint firstItem="yir-jg-ddC" firstAttribute="trailing" secondItem="n2i-JS-5V4" secondAttribute="trailing" id="YRZ-p0-7jj"/>
-                                                        <constraint firstAttribute="width" constant="359" id="bGa-0e-se8"/>
+                                                        <constraint firstAttribute="width" constant="375" id="bGa-0e-se8"/>
                                                         <constraint firstItem="n2i-JS-5V4" firstAttribute="top" secondItem="we2-aQ-2fJ" secondAttribute="bottom" constant="7" id="cPg-lr-agy"/>
                                                         <constraint firstItem="n2i-JS-5V4" firstAttribute="leading" secondItem="8XU-aO-ENz" secondAttribute="leading" constant="86" id="t4M-92-4py"/>
                                                         <constraint firstAttribute="bottom" secondItem="yir-jg-ddC" secondAttribute="bottom" constant="60" id="vrS-F4-Owb"/>
-                                                        <constraint firstAttribute="trailing" secondItem="we2-aQ-2fJ" secondAttribute="trailing" constant="51" id="yoe-PG-r1J"/>
+                                                        <constraint firstAttribute="trailing" secondItem="we2-aQ-2fJ" secondAttribute="trailing" constant="67" id="yoe-PG-r1J"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
                                         </view>
                                         <color key="backgroundColor" red="0.98431372549999996" green="0.98431372549999996" blue="0.98431372549999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="8XU-aO-ENz" secondAttribute="trailing" id="NP3-v0-jNz"/>
-                                            <constraint firstItem="8XU-aO-ENz" firstAttribute="top" secondItem="RMN-JY-nD4" secondAttribute="topMargin" id="Qnw-T0-Rct"/>
-                                            <constraint firstAttribute="bottomMargin" secondItem="8XU-aO-ENz" secondAttribute="bottom" id="RTM-rt-bvF"/>
+                                            <constraint firstAttribute="trailing" secondItem="8XU-aO-ENz" secondAttribute="trailing" id="Mvd-9d-ora"/>
+                                            <constraint firstItem="8XU-aO-ENz" firstAttribute="top" secondItem="RMN-JY-nD4" secondAttribute="top" id="ddj-Y9-BTS"/>
+                                            <constraint firstAttribute="bottom" secondItem="8XU-aO-ENz" secondAttribute="bottom" id="gOk-HP-jVB"/>
                                         </constraints>
                                         <connections>
                                             <outlet property="bodyLabel" destination="yir-jg-ddC" id="lrJ-ar-HA2"/>
