--- a/TipTap/Module/SearchLocation/TTSearchViewController.xib
+++ b/TipTap/Module/SearchLocation/TTSearchViewController.xib
@@ -68,6 +68,10 @@
                         <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="rzs-Ch-fuK">
                             <rect key="frame" x="0.0" y="56" width="281" height="256"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <outlet property="dataSource" destination="-1" id="hUc-BQ-7cR"/>
+                                <outlet property="delegate" destination="-1" id="dNy-R6-HUa"/>
+                            </connections>
                         </tableView>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
